--- a/Database/Database.csproj
+++ b/Database/Database.csproj
@@ -7,4 +7,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="dbup-postgresql" Version="7.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Scripts\" />
+    </ItemGroup>
+
 </Project>
