--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,6 @@ jobs:
 
       - name: Run dev fixtures (migration + --dev)
         env:
-          CONNECTION_STRING: ${{ secrets.CONNECTION_STRING }}
+          CONNECTION_STRING: ${{ secrets.DEV_CONNECTION_STRING }}
         run: |
           dotnet run --project ./path/to/your/project.csproj "${CONNECTION_STRING}" --dev
